# PScript

./: .gitignore  CMakeLists.txt  README.md
refs/scratches-python/: dispy.py  opname.json  pyvm.py
src/: CMakeLists.txt  main.c  main.h
src/gc/: CMakeLists.txt  gc.c  gc.h
test/: CMakeLists.txt
test/py/: peval.py  testgc.py
test/py/pgc/: __init__.py  cdefs.py  consts.py  gc.py  libgc.py
test/src/: pscript_tests.c
